<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <!-- Button labels -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <!-- Home menu items -->
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_new_bookmark">New Connection</string>
    <string name="menu_app_settings">Settings</string>
    <!-- Bookmark menu items -->
    <string name="menu_title_bookmark">Connection</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <!-- Session menu items -->
    <string name="menu_sys_keyboard">Keyboard</string>
    <string name="menu_ext_keyboard">Function Keys</string>
    <string name="menu_touch_pointer">Touch Pointer</string>
    <string name="menu_home">home</string>
    <string name="menu_disconnect">disconnect</string>
    <!-- List section headers -->
    <string name="section_bookmarks">Manual Connections</string>
    <string name="section_active_sessions">Active Sessions</string>
    <!-- Search strings -->
    <string name="search_hint">Connect to Computer</string>    
    <!-- List placeholder labels -->
    <string name="list_placeholder_login">Login</string>
    <string name="list_placeholder_no_servers">No Servers</string>
    <string name="list_placeholder_connecting">Connecting &#8230;</string>
    <string name="list_placeholder_disconnecting">Disconnecting &#8230;</string>
    <string name="list_placeholder_connection_error">Connection Lost</string>
    <string name="list_placeholder_wrong_password">Wrong Password</string>
    <string name="list_placeholder_invalid_username">Invalid Username</string>
    <string name="list_placeholder_add_bookmark">Add Connection</string>
    <!-- Bookmark settings strings -->
    <string name="settings_cat_host">Host</string>
    <string name="settings_label">Label</string>
    <string name="settings_hostname">Host</string>
    <string name="settings_port">Port</string>
    <string name="settings_cat_credentials">Credentials</string>
    <string name="settings_credentials">Credentials</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_domain">Domain</string>
    <string name="settings_cat_settings">Settings</string>
    <string name="settings_screen">Screen</string>
    <string name="settings_cat_screen">Screen Settings</string>
    <string name="settings_colors">Colors</string>
    <string-array name="colors_array">
        <item>High Color (16 Bit)</item>
        <item>True Color (24 Bit)</item>
        <item>Highest Quality (32 Bit)</item>
    </string-array>
    <string-array name="colors_values_array">
        <item>16</item>
        <item>24</item>
        <item>32</item>
    </string-array>
    <string name="settings_resolution">Resolution</string>
    <string name="resolution_automatic">Automatic</string>
    <string name="resolution_fit">Fitscreen</string>
    <string name="resolution_custom">Custom</string>
    <string-array name="resolutions_array">
        <item>Automatic</item>
        <item>Fit Screen</item>
        <item>Custom</item>
        <item>640x480</item>
        <item>720x480</item>
        <item>800x600</item>
        <item>1024x768</item>
        <item>1280x1024</item>
        <item>1440x900</item>
        <item>1920x1080</item>
        <item>1920x1200</item>
    </string-array>
    <string-array name="resolutions_values_array">
        <item>automatic</item>
        <item>fitscreen</item>
        <item>custom</item>
        <item>640x480</item>
        <item>720x480</item>
        <item>800x600</item>
        <item>1024x768</item>
        <item>1280x1024</item>
        <item>1440x900</item>
        <item>1920x1080</item>
        <item>1920x1200</item>
    </string-array>
    <string name="settings_width">Width</string>
    <string name="settings_height">Height</string>
    <string name="settings_performance">Performance</string>
    <string name="settings_cat_performance">Performance Settings</string>
    <string name="settings_perf_remotefx">RemoteFX</string>
    <string name="settings_perf_wallpaper">Desktop Background</string>
    <string name="settings_perf_font_smoothing">Font Smoothing</string>
    <string name="settings_perf_desktop_composition">Desktop Composition</string>
    <string name="settings_perf_full_window_drag">Window contents while dragging</string>
    <string name="settings_perf_menu_animation">Menu Animation</string>
    <string name="settings_perf_theming">Visual Styles</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_cat_advanced">Advanced Settings</string>
    <string name="settings_enable_3g_settings">3G Settings</string>
    <string name="settings_screen_3g">3G Screen</string>
    <string name="settings_performance_3g">3G Performance</string>
    <string name="settings_cat_gateway">Gateway</string>
    <string name="settings_enable_gateway_settings">Enable Gateway</string>
    <string name="settings_gateway_settings">Gateway Settings</string>    
    <string name="settings_redirect_sdcard">Redirect SDCard</string>
		<string name="settings_redirect_sound">Redirect Sound</string>
    <string-array name="redirect_sound_array">
        <item>Do not play</item>
        <item>Play on Server</item>
        <item>Play on Device</item>
    </string-array>
    <string-array name="redirect_sound_values_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="settings_redirect_microphone">Redirect Microphone</string>
    <string name="settings_security">Security</string>
    <string-array name="security_array">
        <item>Automatic</item>
        <item>RDP</item>
        <item>TLS</item>
        <item>NLA</item>
    </string-array>
    <string-array name="security_values_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="settings_remote_program">Remote Program</string>
    <string name="settings_work_dir">Working Directory</string>
    <string name="settings_async_channel">Async channel</string>
    <string name="settings_async_transport">Async transport</string>
    <string name="settings_async_input">Async input</string>
    <string name="settings_async_update">Async update</string>
    <string name="settings_console_mode">Console Mode</string>
    <!-- App settings strings -->
    <string name="settings_password_present">*******</string>
    <string name="settings_password_empty">not set</string>
    <string name="settings_cat_ui">User Interface</string>
    <string name="settings_ui_hide_status_bar">Hide Status Bar</string>
    <string name="settings_ui_hide_zoom_controls">Hide Zoom Controls</string>
    <string name="settings_ui_swap_mouse_buttons">Swap Mouse Buttons</string>
    <string name="settings_ui_invert_scrolling">Invert Scrolling</string>
    <string name="settings_ui_auto_scroll_touchpointer">Touch Pointer Auto Scroll</string>
    <string name="settings_ui_ask_on_exit">Show Dialog on Exit</string>
    <string name="settings_cat_power">Power Saving</string>
    <string name="settings_power_disconnect_timeout">Close idle Connections</string>
    <string name="settings_cat_security">Security</string>
    <string name="settings_security_accept_certificates">Accept all Certificates</string>
    <string name="settings_security_clear_certificate_cache">Clear Certificate Cache</string>
    <string name="settings_description_after_minutes">After %1$d Minutes</string>
    <string name="settings_description_disabled">Disabled</string>
    <!-- Activity titles -->
    <string name="title_bookmark_settings">Connection Settings</string>
    <string name="title_application_settings">Settings</string>
    <string name="title_home">aFreeRDP - FreeRDP for Android</string>
    <string name="title_create_shortcut">RDP Connections</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <!-- Error message strings -->
    <string name="error_bookmark_incomplete_title">Cancel without saving?</string>
    <string name="error_bookmark_incomplete">Press "Cancel" to abort!\nPress "Continue" to specify the required fields!</string>
    <string name="error_connection_failure">Failed to establish a connection to the server!</string>
    <!-- Info message strings -->
    <string name="info_capabilities_changed">The screen settings have changed because the server does not support the settings you specified!</string>
    <string name="info_reset_success">Deleted the certificate cache!</string>
    <string name="info_reset_failed">Failed to delete certificate cache!</string>
    <!-- Dialog strings -->
    <string name="dlg_title_verify_certificate">Verify Certificate</string>
    <string name="dlg_msg_verify_certificate">The identity of the remote computer cannot be verified. Do you want to connect anyway?</string>
    <string name="dlg_title_credentials">Please enter your credentials</string>
    <string name="dlg_title_create_shortcut">Create Shortcut</string>
    <string name="dlg_msg_create_shortcut">Shortcut name:</string>
    <string name="dlg_msg_connecting">Connecting &#8230;</string>
    <string name="dlg_msg_logging_in">Logging in &#8230;</string>
    <string name="dlg_title_about">About aFreeRDP</string>
    <string name="dlg_msg_about">Version: %1$s\n\u00A9 2012 Thinstuff Technologies GmbH</string>
    <string name="dlg_title_create_bookmark_after_qc">Save Connection Settings?</string>
    <string name="dlg_msg_create_bookmark_after_qc">Your connection settings have not been saved! Do you want to save them?</string>
    <string name="dlg_title_save_bookmark">Save Connection?</string>
    <string name="dlg_save_bookmark">Do you want to save any changes you made to the connection settings?</string>
    <string name="dlg_dont_show_again">Do not ask again</string>
    <string name="dlg_title_exit">Exit Application?</string>
    <string name="dlg_msg_exit">Are you sure you want to exit the application?</string>
    <string name="dlg_title_clear_cert_cache">Delete Certificates?</string>
    <string name="dlg_msg_clear_cert_cache">Are you sure you want to delete all your cached Certificates?</string>
    <string name="debug_level">Debug Level</string>
    <string name="settings_debug">Debug Settings</string>
</resources>
