<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
	Debug Settings Layout

	Copyright 2013 Thincast Technologies GmbH
	Copyright 2013 Armin Novak <armin.novak@thincast.com>
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
		http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
*/
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:freerdp="http://schemas.android.com/apk/res-auto">
        <PreferenceCategory android:title="@string/settings_debug">
	        <com.freerdp.freerdpcore.utils.IntEditTextPreference
	            android:key="bookmark.debug_level"
	            android:title="@string/debug_level"
	            android:summary="Debug level, 0 to disable."
	            android:numeric="integer"
	            android:inputType="number"
	            freerdp:bounds_min="0"
	            freerdp:bounds_max="10"
	            freerdp:bounds_default="0" />            
						<CheckBoxPreference android:key="bookmark.async_channel"
							android:title="@string/settings_async_channel"/>
						<CheckBoxPreference android:key="bookmark.async_transport"
							android:title="@string/settings_async_transport"/>
						<CheckBoxPreference android:key="bookmark.async_update"
							android:title="@string/settings_async_update"/>
						<CheckBoxPreference android:key="bookmark.async_input"
							android:title="@string/settings_async_input"/>
        </PreferenceCategory>
</PreferenceScreen>
